# shinjuku

./: .gitignore  build_and_run.sh  setup.sh
client/: CMakeLists.txt  README.md  dist.h  dpdk_bimodal_main.cpp  dpdk_client.cpp  dpdk_client.h  dpdk_main.cpp
dp/core/: dispatcher.c  networker.c  worker.c
dp/drivers/: i40e.c  ixgbe.c
inc/ix/: dispatch.h  mbuf.h
